# agent-steward

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.md  rule-gap.md
.github/workflows/: ci.yml  release.yml
docs/: REFERENCE.md  index.html
examples/: personal-knowledge-os.yaml  research-graph-example.yaml
src/agent_steward/: __init__.py  allocate.py  cli.py  ingest.py  route.py
tests/: test_steward.py
